se cambian de sitio las paginas

--- a/cabana/src/main/resources/static/index.html
+++ b/cabana/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 <h1>#MisionTIC 2022</h1>
 <div class="container unauthenticated">
     para iniciar sesion con Github:
-<a href="/oauth2/authorization/github">Haz click aqui</a>
+<a href="http://130.61.215.83/PaginaPrincipal.html">Haz click aqui</a>
 </div>
 <div class="container authenticated" style="display:none">
     Autenticado como: <span id="user"></span>
